...
    },
    "Afgerond" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finished"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Afgerond"
...
    },
    "Definitief verwijderen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Permanently"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Definitief verwijderen"
...
    },
    "Dit is een voorbeeld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This is an example"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dit is een voorbeeld"
...
    },
    "Hulp nodig? Stuur ons een email" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ideas for the app? Send us an email"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Idee voor de app? Stuur ons een e-mail"
...
    },
    "Ongedaan maken" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Undo"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ongedaan maken"
...
    },
    "Schrijf een review over de app" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Write a review of the app"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schrijf een review over de app"
...
    },
    "Uitleg over Afgerond" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finished help"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Uitleg over Afgerond"
...
    },
    "Volgende stap" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next step"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Volgende stap"
...
    },
    "Vorige stap" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Previous step"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vorige stap"
...
    },
    "Zoek in Afgerond" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search Finished"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zoek in Afgerond"
...
